langtools/test/tools/javac/ConditionalWithVoid.out
ConditionalWithVoid.java:12:48: compiler.err.neither.conditional.subtype: java.lang.Integer, void
1 error
